<resources>
    <string name="app_name">TestHardwareApp</string>
    <string-array name="test_category">
        <item>Screen</item>

        <item>Microphone</item>
        <item>Sound</item>
        <item>Touch</item>
        <item>Proximity sensor</item>
        <item>Light sensor</item>
        <item>Accelerometer sensor</item>


    </string-array>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="category_screen">Screen</string>
    <string name="category_mini_screen">Mini Screen</string>
    <string name="category_touch">Touch</string>
    <string name="category_sound">Sound</string>
    <string name="category_microphone">Microphone</string>
    <string name="category_proximity">Proximity sensor</string>
    <string name="category_light">Light sensor</string>
    <string name="category_accelerometer">Accelerometer sensor</string>
    <string name="category_humidity">Humidity sensor</string>
    <string name="category_temperature">Temperature sensor</string>
    <string name="ui_okay">Okay</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_error">Error</string>
    <string name="ui_success" translatable="false">Success</string>
    <string name="ui_na">Not Applicable</string>
    <string name="ui_caution">Caution</string>
    <string name="ui_not_support">Not supported</string>
    <string name="ui_not_support_android_version">Only support Android %1$s+</string>
    <string name="dialog_feature_na_message">Your Android device does not have this feature, or this feature may be using by other apps.</string>
    <string name="dialog_permission_denied_message">Without granting permissions, it will probably not work.\n\nPlease grant the permissions to access this feature.</string>
    <string name="dialog_permission_denied_posbtn">Settings</string>
    <string name="title_activity_screen">Monitor Color</string>
    <string name="title_activity_light">Light Sensor</string>
    <string name="title_activity_humidity">Humidity Sensor</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_qr_scanner">Barcode/QR Code Scanner</string>
    <string name="title_activity_bubble_level">Bubble level</string>
    <string name="title_activity_sound_meter">Sound Meter</string>
    <string name="title_activity_speed_test">Speed Test</string>
    <string name="title_activity_flashlight">Flashlight</string>
    <string name="title_activity_biometric">Fingerprint</string>
    <string name="title_activity_drawing">Touch Screen</string>
    <string name="title_activity_touch">Multi Touch</string>
    <string name="title_activity_speaker">Speaker and Vibrate</string>
    <string name="title_activity_microphone">Microphone</string>
    <string name="title_activity_wifi">Wi-Fi</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_ble">Bluetooth Low Energy</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="title_activity_step">Pedometer</string>
    <string name="title_activity_temperature">Temperature Sensor</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="title_activity_proximity">Proximity Sensor</string>
    <string name="title_activity_gravity">Gravity Sensor</string>
    <string name="title_activity_pressure">Pressure Sensor</string>
    <string name="title_activity_system_monitor">System Monitor</string>
    <string name="title_activity_compass">Compass</string>
    <string name="title_activity_device">Hardware</string>
    <string name="title_activity_cpu">CPU/Memory</string>
    <string name="title_activity_open_gl" translatable="false">OpenGL</string>
    <string name="title_activity_android_version">Android Version</string>
    <string name="title_activity_application">Installed Apps</string>
    <string name="title_activity_battery">Battery</string>
    <string name="title_activity_gsm">Network</string>
    <string name="title_activity_test_ad_remover">Donate</string>
    <string name="title_activity_app_brain">More App</string>
    <string name="title_activity_rate_us">Rate us!</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_app_choose">Installed Apps</string>
    <string name="title_activity_app_user">User Installed Apps</string>
    <string name="title_activity_app_system">System Apps</string>
    <string name="title_activity_app_all">All Apps</string>
    <string name="app_package">Application Package</string>
    <string-array name="tools_string_array" translatable="false">
        <item>@string/title_activity_qr_scanner</item>
        <item>@string/title_activity_flashlight</item>
        <item>@string/title_activity_bubble_level</item>
        <item>@string/title_activity_sound_meter</item>
    </string-array>
    <string-array name="hardware_string_array" translatable="false">
        <item>@string/title_activity_screen</item>
        <item>@string/title_activity_drawing</item>
        <item>@string/title_activity_touch</item>
        <item>@string/title_activity_camera</item>
        <item>@string/title_activity_speaker</item>
        <item>@string/title_activity_microphone</item>
        <item>@string/title_activity_nfc</item>
        <item>@string/title_activity_location</item>
        <item>@string/title_activity_biometric</item>
    </string-array>
    <string-array name="sensor_string_array" translatable="false">
        <item>@string/title_activity_step</item>
        <item>@string/title_activity_temperature</item>
        <item>@string/title_activity_compass</item>
        <item>@string/title_activity_light</item>
        <item>@string/title_activity_accelerometer</item>
        <item>@string/title_activity_proximity</item>
        <item>@string/title_activity_pressure</item>
        <item>@string/title_activity_gravity</item>
        <item>@string/title_activity_humidity</item>
    </string-array>
    <string-array name="info_string_array" translatable="false">
        <item>@string/title_activity_system_monitor</item>
        <item>@string/title_activity_wifi</item>
        <item>@string/title_activity_bluetooth</item>
        <item>@string/title_activity_cpu</item>
        <item>@string/title_activity_open_gl</item>
        <item>@string/title_activity_device</item>
        <item>@string/title_activity_android_version</item>
        <item>@string/title_activity_battery</item>
        <item>@string/title_activity_camera</item>
        <item>@string/title_activity_gsm</item>
        <item>@string/title_activity_application</item>
    </string-array>
    <string-array name="other_string_array" translatable="false">
        <item>@string/title_activity_rate_us</item>
        <item>@string/title_activity_language</item>
        <item>@string/title_activity_test_ad_remover</item>
    </string-array>
    <string-array name="app_choose_string_array" translatable="false">
        <item>@string/title_activity_app_user</item>
        <item>@string/title_activity_app_system</item>
        <item>@string/title_activity_app_all</item>
    </string-array>
    <string name="main_title_tools">Utilities &amp; Tools</string>
    <string name="main_title_hardware">Hardware Testing</string>
    <string name="main_title_sensor">Sensor Testing</string>
    <string name="main_title_information">Device Information</string>
    <string name="main_title_other">Other</string>
    <string name="main_tab_title_1">Device Test</string>
    <string name="main_tab_title_2">About</string>
    <string-array name="main_tab_title" translatable="false">
        <item>@string/main_tab_title_1</item>
        <item>@string/main_tab_title_2</item>
    </string-array>
    <string name="app_info_tab_title_1">Actions</string>
    <string name="app_info_tab_title_2">Package</string>
    <string name="app_info_tab_title_3">Permissions</string>
    <string-array name="app_info_tab_title" translatable="false">
        <item>@string/app_info_tab_title_1</item>
        <item>@string/app_info_tab_title_2</item>
        <item>@string/app_info_tab_title_3</item>
    </string-array>
    <string name="test_monitor_tab_title_1">CPU</string>
    <string name="test_monitor_tab_title_2">Network</string>
    <string name="test_monitor_tab_title_3">Memory</string>
    <string-array name="test_monitor_tab_title" translatable="false">
        <item>@string/test_monitor_tab_title_1</item>
        <item>@string/test_monitor_tab_title_2</item>
        <item>@string/test_monitor_tab_title_3</item>
    </string-array>
    <string name="color_title">Please choose</string>
    <string name="color_message">Normal mode:\nPress to change next color\n\nFixing mode:\nChanging color rapidly</string>
    <string name="color_normal_btn">Normal mode</string>
    <string name="color_test_btn">Fixing mode</string>
    <string name="color_test_message">During the fixing mode, the screen will be flashing and changing color rapidly.
        \nDO NOT WATCH to the screen otherwise it may hurt your eyes.
        \n\nIt is recommend to do it in charging. This mode will be closed after 20 minutes automatically.
        \n\nThis fixing mode is not guaranteed to fix the defective pixels. Please contact manufacturer if you have any problem.
        \n\nYou may press the BACK key to the main screen.</string>
    <string name="vibrate_button">Test Vibration</string>
    <string name="vibrate_stop_button">Stop Vibration</string>
    <string name="vibrate_string_1">Long Vibration</string>
    <string name="vibrate_string_2">Short Vibration</string>
    <string-array name="vibrate_string_array" translatable="false">
        <item>@string/vibrate_string_1</item>
        <item>@string/vibrate_string_2</item>
    </string-array>
    <string name="ring_button">Play Music</string>
    <string name="ring_stop_button">Stop Music</string>
    <string name="adjust_volume">Adjust the Volume</string>
    <string name="vibrate_type">Vibration Mode</string>
    <string name="nfc_tutor_message">Place any NFC tag behind the device, and you will get beep sounds when it is successful.</string>
    <string name="touch_message">Touch the screen with multiple fingers.</string>
    <string name="info_hardware_string_1">Brand</string>
    <string name="info_hardware_string_2">Device</string>
    <string name="info_hardware_string_3">Model</string>
    <string name="info_hardware_string_4">Product name</string>
    <string name="info_hardware_string_5">Display</string>
    <string name="info_hardware_string_6">Fingerprint</string>
    <string name="info_hardware_string_7">Board</string>
    <string name="info_hardware_string_8">Manufacturer</string>
    <string name="info_hardware_string_9">Serial</string>
    <string name="info_hardware_string_10">User</string>
    <string name="info_hardware_string_11">Host</string>
    <string name="info_hardware_string_12">Board</string>
    <string name="mic_start_recording">Start recording</string>
    <string name="mic_start_playing">Start playing</string>
</resources>