<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SoundActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/category_sound"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/border"
            style="@style/Border"
            app:layout_constraintBottom_toTopOf="@id/vibrateTitleTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringButton" />

<!--        <androidx.appcompat.widget.AppCompatSpinner-->
<!--            android:id="@+id/vibrateSpinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="12dp"-->
<!--            app:layout_constraintBottom_toTopOf="@id/vibrateButton"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/vibrateTitleTv" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vibrateTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Độ sáng"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@id/sb_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ringTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_volume"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@id/ringButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ringButton"
            style="@style/MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring_button"
            app:layout_constraintBottom_toTopOf="@id/border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringTitleTv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrateButton"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vibrateTitleTv" />

        <SeekBar
            android:id="@+id/sb_volume"
            android:layout_width="240dp"
            android:layout_height="44dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/ringButton"
            app:layout_constraintTop_toTopOf="@+id/ringButton" />

        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="240dp"
            android:layout_height="44dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/vibrateButton"
            app:layout_constraintTop_toTopOf="@+id/vibrateButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>